    least one colon or one dash, we should expect epoch and revision numbers.
  * Always set SOURCE_DATE_EPOCH in dpkg-buildpackage and dpkg-source. Use
    the current date if the changelog does not have one. Closes: #849081
  * Refactor update-alternatives pathname existence check into a new function.
  * Avoid useless repeated lstat()s in update-alternatives.
  * Portability:
    - On GNU/Hurd try to use the new process executable name attribute from
      libps, to properly match on start-stop-daemon --exec.
  * Perl modules:
    - Fix Debian architecture wildcard parsing so that matching four-tuple
      matchings work. Missed in dpkg 1.18.11.
      Reported by Julian Andres Klode <jak@debian.org>.
    - Add new import tags for Dpkg::Arch.
    - Abort on EOF in patch name prompt in Dpkg::Source::Package::V2,
      instead of getting into an infinite loop. Closes: #851441
    - Call anonymous subs via -> operator instead of casting with &, and fix
      bogus POD documentation to match the code.
    - Add new Auto-Built-Package field to Dpkg::Control::Fields.
  * Documentation:
    - Cleanup software requirements in README.
    - Move control member file references from dpkg(1) to deb(5).
    - Fix typos in docs and code comments.
    - Document Auto-Built-Package field in deb-control(5).
  * Packaging:
    - Add debsig-verify to dpkg Suggests. The code optionally supports this
      specific signed .deb verification program.
      Prompted by Stuart Prescott <stuart@debian.org>.
  * Test suite:
    - Generate and check all currently possible architecture wildcards.
    - Correctly iterate over all default and passed .dsc template substvars.

  [ Updated programs translations ]
  * German (Sven Joachim).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated man pages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Tue, 20 Dec 2016 14:30:31 +0100

dpkg (1.18.18) unstable; urgency=medium
